tests/macros/float/mask.rs
fn main() {
    let q = requestty::questions![Float { mask: todo!() }];
}
